Fixed code to generate the test data files in the correct format

--- a/Yukti/modelingRandomForest.ipynb
+++ b/Yukti/modelingRandomForest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "mobile-sense",
+   "id": "muslim-feedback",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "latest-translator",
+   "id": "prescribed-sheriff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "small-trail",
+   "id": "sharing-playing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "adjustable-biodiversity",
+   "id": "vietnamese-opportunity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "front-boating",
+   "id": "official-twist",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "facial-verification",
+   "id": "danish-alberta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "significant-response",
+   "id": "vanilla-cotton",
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "formal-quilt",
+   "id": "valuable-apollo",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "apart-caribbean",
+   "id": "pressing-liberty",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "upper-image",
+   "id": "realistic-eugene",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "instrumental-reality",
+   "id": "south-amendment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "thirty-village",
+   "id": "adapted-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "rotary-agreement",
+   "id": "bizarre-valve",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "continental-output",
+   "id": "passing-shield",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "several-bonus",
+   "id": "naughty-chinese",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "polish-uniform",
+   "id": "alleged-bermuda",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "racial-research",
+   "id": "handmade-pursuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "worse-blackjack",
+   "id": "familiar-addiction",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "rough-artwork",
+   "id": "operating-olympus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "specific-processing",
+   "id": "julian-child",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "imposed-burning",
+   "id": "cloudy-redhead",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "fixed-offer",
+   "id": "ancient-eleven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "gross-packaging",
+   "id": "existing-treat",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "romantic-clone",
+   "id": "leading-alpha",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "peripheral-travel",
+   "id": "diagnostic-gauge",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "bibliographic-austin",
+   "id": "changing-graphics",
    "metadata": {},
    "outputs": [
     {
@@ -990,8 +990,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "speaking-display",
+   "execution_count": 97,
+   "id": "injured-lawrence",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = pd.read_csv('C:/Users/ykath/Downloads/final_test.csv')\n",
+    "df4 = df4.drop('Unnamed: 0', axis = 1) # remove extra column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "close-venice",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feats_final = df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "disturbed-paragraph",
    "metadata": {},
    "outputs": [
     {
@@ -1001,33 +1022,33 @@
        "       11.62094851, 12.36874111])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_final = regr_4.predict(feats3)\n",
+    "y_pred_final = regr_4.predict(df4)\n",
     "y_pred_final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "honest-sociology",
+   "execution_count": 102,
+   "id": "monetary-worst",
    "metadata": {},
    "outputs": [],
    "source": [
     "Id_test = pd.read_csv('C:/Users/ykath/Downloads/test.csv')['Id']\n",
     "predicted_price = pd.Series(np.exp(y_pred_final))\n",
     "submission = pd.DataFrame({'Id': Id_test, 'SalePrice': predicted_price})\n",
-    "submission.to_csv('submission.csv', index=False)"
+    "submission.to_csv('submission_RF_yukti.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "yellow-distribution",
+   "id": "cathedral-father",
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "engaged-civilian",
+   "id": "dramatic-reply",
    "metadata": {},
    "outputs": [],
    "source": []
