Tried Lasso regression with XGBoost to improve performance

--- a/Yukti/modelingRandomForest.ipynb
+++ b/Yukti/modelingRandomForest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "muslim-feedback",
+   "id": "informative-system",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "prescribed-sheriff",
+   "id": "legitimate-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sharing-playing",
+   "id": "headed-september",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "vietnamese-opportunity",
+   "id": "neutral-vegetable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "official-twist",
+   "id": "upset-bloom",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "danish-alberta",
+   "id": "architectural-retail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "vanilla-cotton",
+   "id": "binary-particular",
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "valuable-apollo",
+   "id": "atmospheric-flexibility",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "pressing-liberty",
+   "id": "african-building",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "realistic-eugene",
+   "id": "happy-laptop",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "south-amendment",
+   "id": "willing-triangle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "adapted-cooper",
+   "id": "developed-mobile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bizarre-valve",
+   "id": "naval-clerk",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "passing-shield",
+   "id": "structural-structure",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "naughty-chinese",
+   "id": "textile-conflict",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "alleged-bermuda",
+   "id": "every-principal",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "handmade-pursuit",
+   "id": "violent-mobile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "familiar-addiction",
+   "id": "compact-repair",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "operating-olympus",
+   "id": "moral-calvin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "julian-child",
+   "id": "facial-costs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "cloudy-redhead",
+   "id": "powerful-board",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ancient-eleven",
+   "id": "southern-prayer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "existing-treat",
+   "id": "waiting-sending",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "leading-alpha",
+   "id": "confident-envelope",
    "metadata": {},
    "outputs": [
     {
@@ -874,124 +874,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "diagnostic-gauge",
+   "execution_count": 1,
+   "id": "graphic-zimbabwe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([12.07237933, 12.04112939, 11.73470372, 11.9911547 , 11.88574989,\n",
-       "       11.95114625, 12.29321791, 12.05533494, 12.36961401, 11.64121823,\n",
-       "       12.16958639, 12.6745845 , 11.63887604, 11.56649772, 11.83426075,\n",
-       "       11.84827007, 12.02661904, 11.85029962, 12.19114658, 11.9564824 ,\n",
-       "       12.94650354, 12.42464302, 12.10678202, 11.75842136, 11.88138861,\n",
-       "       12.00307886, 11.81865615, 12.14154923, 12.02382975, 11.89820379,\n",
-       "       11.67544215, 11.75440467, 11.62430261, 11.59249319, 11.87807451,\n",
-       "       11.86780912, 11.64131969, 11.95856888, 12.46559948, 11.85047675,\n",
-       "       12.41566254, 11.78657162, 11.69919497, 12.17300962, 12.54924221,\n",
-       "       12.1909106 , 11.63924364, 12.77554807, 12.26764348, 12.41532969,\n",
-       "       12.03555383, 12.05263139, 11.69029723, 12.35458325, 12.1667416 ,\n",
-       "       11.48850868, 11.70205547, 11.90941603, 11.55299015, 11.48517196,\n",
-       "       12.08431473, 11.83518502, 12.55953069, 12.73643749, 12.2107015 ,\n",
-       "       12.33271014, 12.17961241, 11.73752237, 11.82673926, 11.65117533,\n",
-       "       11.41454749, 12.44770945, 11.79430094, 11.86587123, 12.0579268 ,\n",
-       "       11.68707836, 12.16504319, 12.68872906, 11.73090712, 11.4207397 ,\n",
-       "       12.63773136, 11.82031075, 11.9272299 , 12.4186024 , 11.86338014,\n",
-       "       11.93508169, 12.16859548, 11.44291698, 11.9250639 , 11.69884009,\n",
-       "       11.54333406, 12.09993637, 11.98699108, 11.9591771 , 12.55310859,\n",
-       "       11.69963564, 12.01153834, 11.95008379, 11.84448736, 12.16156641,\n",
-       "       12.54059876, 11.74481249, 11.12280559, 12.17716311, 12.85953822,\n",
-       "       11.733979  , 12.2246532 , 12.01406838, 12.60778453, 12.03677019,\n",
-       "       12.1673626 , 11.97548828, 11.84282282, 12.47184356, 11.78889331,\n",
-       "       11.87845605, 11.90325534, 11.8015934 , 12.50452206, 11.99572805,\n",
-       "       12.38690396, 12.46986518, 12.6440654 , 12.24779627, 11.8735907 ,\n",
-       "       11.84909657, 12.1786102 , 11.69878195, 12.00778621, 11.76969025,\n",
-       "       12.02919884, 12.37145683, 12.15663777, 11.41499123, 11.94770439,\n",
-       "       12.65035929, 11.8827925 , 11.72015675, 12.80667666, 11.52125183,\n",
-       "       11.37310444, 12.13524615, 11.53061724, 12.17914199, 11.5252752 ,\n",
-       "       11.99802304, 11.74944154, 11.84962681, 12.01104324, 12.73664286,\n",
-       "       12.24653205, 12.6481716 , 11.97426459, 11.72703367, 11.34595346,\n",
-       "       11.96841465, 12.47993148, 10.88689855, 11.66321358, 12.10203677,\n",
-       "       12.36674971, 12.12994105, 12.10401024, 12.74767568, 12.23971039,\n",
-       "       11.72418551, 12.17837245, 11.92182242, 12.12566704, 11.33182596,\n",
-       "       12.53368154, 12.4254361 , 11.19657845, 12.58407467, 11.41730824,\n",
-       "       12.79192637, 11.71946589, 12.06793136, 11.85367054, 12.21146773,\n",
-       "       11.77978554, 12.2780972 , 12.32209401, 11.73417702, 12.05452213,\n",
-       "       11.86174917, 11.72561074, 11.94030831, 11.49194576, 11.46659294,\n",
-       "       11.71364924, 12.54903937, 12.4929491 , 11.63790893, 12.6273149 ,\n",
-       "       12.60138654, 12.03655405, 12.29515961, 11.65072903, 12.14636323,\n",
-       "       12.34806368, 12.40024501, 12.45275873, 11.40515252, 12.55582668,\n",
-       "       11.52099978, 12.15840531, 11.9815631 , 11.76062981, 11.89681107,\n",
-       "       12.16771896, 12.25583353, 11.87172448, 12.45671349, 12.2405065 ,\n",
-       "       12.10801189, 12.76930941, 12.05728993, 11.70642993, 12.08807796,\n",
-       "       12.28371691, 11.71245694, 11.60299331, 11.76180186, 11.80253625,\n",
-       "       11.99573361, 11.82665407, 11.9278734 , 12.39804296, 11.75548174,\n",
-       "       11.88784441, 11.68495512, 11.87718082, 11.78216988, 12.08868259,\n",
-       "       11.66347466, 11.97052429, 11.88276924, 11.6868626 , 12.13671518,\n",
-       "       11.67241045, 11.37491223, 12.75747715, 12.76406011, 11.89226031,\n",
-       "       12.368807  , 11.77382349, 11.45186099, 11.40666161, 12.24204386,\n",
-       "       11.30002774, 12.24933587, 11.95278483, 11.78815603, 12.07388267,\n",
-       "       11.79675778, 12.25396843, 12.03186927, 12.17287847, 11.72866432,\n",
-       "       11.62731156, 11.60139785, 12.8055681 , 11.63483821, 12.081029  ,\n",
-       "       12.31895758, 11.63467152, 11.75060305, 12.08959956, 11.75155742,\n",
-       "       11.83736968, 11.80248666, 12.09644361, 11.89658331, 12.4415517 ,\n",
-       "       11.8910151 , 11.40884613, 12.24163596, 12.45603866, 11.49116068,\n",
-       "       12.39282909, 11.64261527, 11.50297344, 12.07316191, 11.78747054,\n",
-       "       11.59437899, 12.0882863 , 12.29979957, 12.16630353, 12.24974741,\n",
-       "       11.70124813, 11.7193635 , 12.59457041, 12.02082645, 11.89084775,\n",
-       "       12.10209082, 11.66665573, 11.93502631, 12.29308043, 12.0422076 ,\n",
-       "       11.0527615 , 12.36763232, 11.73668289, 11.74595057, 11.68581406,\n",
-       "       12.2758279 , 11.99327147, 11.61605459, 12.03989959, 12.56232303,\n",
-       "       12.08809806, 12.29755739, 11.52997643, 12.15530126, 12.35204698,\n",
-       "       12.08434163, 11.76118562, 12.80131557, 12.64313517, 12.91574167,\n",
-       "       11.80428968, 11.47713695, 11.87538678, 11.70639348, 11.81827426,\n",
-       "       12.54691096, 12.75991231, 12.15224685, 11.81713073, 12.65341278,\n",
-       "       12.21125586, 12.52906351, 11.85427359, 11.90196324, 11.76605295,\n",
-       "       12.19613993, 11.48341138, 11.73000324, 11.49869439, 11.8811805 ,\n",
-       "       12.2952795 , 11.97741049, 11.79072829, 11.9929185 , 12.77010046,\n",
-       "       12.1017719 , 12.38695302, 11.70357618, 11.97493684, 12.38654548,\n",
-       "       12.57245327, 11.66612186, 11.6503886 , 12.34078886, 12.16459164,\n",
-       "       12.03305699, 12.54582423, 12.95933928, 12.25237856, 11.32069891,\n",
-       "       11.72172261, 11.79546802, 12.05555737, 12.23028833])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_pred4 #predicted values of test data "
+    "#y_pred4 #predicted values of test data "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "changing-graphics",
+   "execution_count": 2,
+   "id": "specified-particular",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([11.73991116, 11.94465757, 12.06876205, ..., 11.97711596,\n",
-       "       11.64079392, 12.35209282])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'regr_2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9e6b46d07558>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_pred3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregr_2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeats3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#y_pred3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'regr_2' is not defined"
+     ]
     }
    ],
    "source": [
     "y_pred3 = regr_2.predict(feats3)\n",
-    "y_pred3"
+    "#y_pred3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "injured-lawrence",
+   "id": "french-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "close-venice",
+   "id": "acting-mattress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "disturbed-paragraph",
+   "id": "continuing-puzzle",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "monetary-worst",
+   "id": "local-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "cathedral-father",
+   "id": "sharing-certificate",
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dramatic-reply",
+   "id": "cardiac-emperor",
    "metadata": {},
    "outputs": [],
    "source": []
